<resources>
    <string name="app_name">Wallet Control</string>

    <!--        labels      -->

    <string name="income_label">Income</string>
    <string name="expense_label">Expense</string>
    <string name="balance_label">Balance</string>
    <string name="no_bills_label">You have no bills yet.</string>
    <string name="cash_label">Cash</string>
    <string name="debit_label">Debit</string>
    <string name="credit_label">Credit</string>
    <string name="deposit_label">Deposit</string>

    <!--        buttons     -->

    <string name="btn_add_income">Add income</string>
    <string name="btn_add_expense">Add expense</string>
    <string name="btn_add">Add</string>

    <!--        hints       -->

    <string name="amount_hint">Amount</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>

    <!--        other       -->

    <string name="currency_ruble">₽</string>
    <string name="currency_euro">€</string>
    <string name="currency_dollar">$</string>
</resources>