<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IncomeAddActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_value_normal"
        android:layout_marginStart="@dimen/dp_value_small"
        android:layout_marginEnd="@dimen/dp_value_small">

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/amount_hint"
            tools:text="124932" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_value_normal"
        android:layout_marginStart="@dimen/dp_value_small"
        android:layout_marginEnd="@dimen/dp_value_small">

        <EditText
            android:id="@+id/et_date"
            android:drawableEnd="@drawable/ic_calendar_interface_symbol_tool"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/date_hint"
            tools:text="23.10.2019"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_value_normal"
        android:layout_marginStart="@dimen/dp_value_small"
        android:layout_marginEnd="@dimen/dp_value_small"
        android:text="@string/btn_add"/>

</LinearLayout>