<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_value_small"
        android:layout_marginTop="@dimen/dp_value_normal"
        android:layout_marginEnd="@dimen/dp_value_small">

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/amount_hint"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            tools:text="124932" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_date"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_value_small"
            android:layout_marginTop="@dimen/dp_value_normal">

            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:longClickable="false"
                android:focusableInTouchMode="false"
                android:drawableEnd="@drawable/ic_calendar_interface_symbol_tool"
                android:hint="@string/date_hint"
                tools:text="23.10.2019" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_value_small"
            android:layout_marginEnd="@dimen/dp_value_small"
            android:layout_marginTop="@dimen/dp_value_normal">

            <EditText
                android:id="@+id/et_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:longClickable="false"
                android:focusableInTouchMode="false"
                android:drawableEnd="@drawable/ic_access_time_black_24dp"
                android:hint="@string/time_hint"
                tools:text="23:22" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_value_small"
        android:layout_marginTop="@dimen/dp_value_normal"
        android:layout_marginEnd="@dimen/dp_value_small"
        android:text="@string/btn_add" />

</LinearLayout>